# ppqq

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.hooks/: .pylintrc
ppqq/: __init__.py  exceptions.py  pipeline.py  settings.py
