[tool.poetry]
name = "ppqq"
version = "0.1.0"
description = "Basic text preprocessing for simple NLP applications."
authors = ["MarcoCBA <smartinellimarco@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "ppqq" },
]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
